<resources>
    <string name="app_name">Verifier</string>
    <string name="main_activity_title">Verifier</string>

    <string name="action_done">Done</string>
    <string name="title_scan_qr_code">Scan QR Code for UID</string>
    <string name="title_register_user">Online EKYC</string>
    <string name="title_register_using_face">Register Using Face</string>
    <string name="title_face_authenticate">Face Authentication</string>
    <string name="title_face_match">Face match</string>
    <string name="title_online_authentication_using_qr">Online Authentication using QR</string>
    <string name="title_online_authentication">Online Authentication</string>
    <string name="title_offline_authentication">Offline Authentication</string>
    <string name="title_reg_using_ekyc">Register using eKYC</string>
    <string name="title_stateless_match">Stateless match</string>
    <string name="title_check_lighting">Check Lighting Condition</string>
    <string name="title_device_info">Device Info</string>
    <string name="good_lighting_condition_msg">Good Lighting Condition</string>
    <string name="install_check_lighting_intent_app">Please Install FaceRD App</string>
    <string name="title_device_check">Check Device Performance</string>

    <string name="text_transaction_id">Transaction Id</string>
    <string name="text_domain_id">Domain Id</string>
    <string name="text_name">Name</string>
    <string name="text_last_four_digit_of_aadhhar">Last four digit of Aadhaar</string>
    <string name="text_uid">UID</string>
    <string name="text_ekyc_doc">EKYC Document</string>
    <string name="text_select_ekyc_doc">Click here to select eKyc Document</string>
    <string name="fetch_ekyc">Fetch eKYC</string>
    <string name="hint_enter_uid">Enter Uid</string>
    <string name="download">Download</string>
    <string name="error_uid">Uid number should be of 12 digits</string>

    <string name="error_face_rd_not_installed">FaceRD App is not installed on device</string>
    <string name="error_face_rd_plus_not_installed">FaceRD+ App is not installed on device</string>
    <string name="error_file_mgr_not_installed">File manager app is not installed on device</string>
    <string name="error_invalid_ekyc_file">Selected file is not a valid eKyc document</string>
    <string name="text_pls_wait_fetching_ekyc">Please wait… Fetching eKYC document</string>
    <string name="text_ekyc_download_success">eKYC fetched successfully</string>
    <string name="text_ekyc_auth_success">Authentication successful.\nKYC Details below</string>
    <string name="text_okay">OK</string>
    <string name="text_no_ekyc_file_selected">No eKyc file selected</string>
    <string name="text_perform_stateless_match">Perform stateless match</string>

    <string name="app_disclaimer">This app is a sample app created for the demonstration of local face authentication.</string>
    <string name="text_proceed">Proceed</string>

    <string name="staging_env">Staging</string>
    <string name="preProd_env">Pre Prod</string>
    <string name="prod_env">Prod</string>
    <string name="radio_grp_header">"Choose one of environment types:"</string>
    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="choose_language_for_faceauth">Choose Language for FaceAuth</string>
    <string name="english">English</string>
    <string name="hindi">हिन्दी</string>
    <string name="bangla">বাংলা</string>
    <string name="marathi">मराठी</string>
    <string name="kannada">ಕನ್ನಡ</string>
    <string name="malayalam">മലയാളം</string>
    <string name="oriya">ଓଡିଆ</string>
    <string name="tamil">தமிழ்</string>
    <string name="telugu">తెలుగు</string>

    <string name="remember_me">Remember me</string>
    <string name="login_preference">loginPreference</string>
    <string name="app_env">appEnv</string>
    <string name="facerd_lang">faceRDLang</string>
    <string name="radio_button_staging_txt">You can fetch Ekyc document</string>
    <string name="radio_button_preProd_txt">Right now Pre Prod Environment does not support fetching ekyc</string>
    <string name="radio_button_Prod_txt">Right now Prod Environment does not support fetching ekyc</string>

    <string name="staging_config">Staging Configurations</string>
    <string name="preprod_config">PreProd Configurations</string>
    <string name="prod_config">Prod Configurations</string>

    <string name="dpId">dpId :</string>
    <string name="rdsId">rdsId :</string>
    <string name="rdsVer">rdsVer :</string>
    <string name="dc">dc :</string>
    <string name="mi">mi :</string>
    <string name="mc">mc :</string>
    <string name="appId">App Id :</string>
    <string name="environment">Environment :</string>
    <string name="apkVersion">Apk Version :</string>
    <string name="supportedLanguages">Supported Languages :</string>
    <string name="appDetails">App Details</string>
    <string name="registerDeviceDetails">Register Device Details</string>
    <string name="errCode">Error Code :</string>
    <string name="errorMsg">Error Msg :</string>
    <string name="errorInformation">Error Information</string>
    <string name="defaultDeviceInfoMsg">Please select FaceRd App</string>

</resources>
