<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <TextView
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="match_parent"
        android:minHeight="?actionBarSize"
        android:background="@color/colorPrimary"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:textColor="@android:color/white"
        android:paddingStart="16dp"
        android:text="@string/title_reg_using_ekyc" />

    <com.google.android.material.textfield.TextInputLayout style="@style/InputFieldLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtTransactionId"
            style="@style/InputFieldEditText"
            android:hint="@string/text_transaction_id"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout style="@style/InputFieldLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtUserId"
            style="@style/InputFieldEditText"
            android:text="PDS-5692"
            android:hint="@string/text_domain_id" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout style="@style/InputFieldLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/userName"
            style="@style/InputFieldEditText"
            android:hint="@string/text_name"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout style="@style/InputFieldLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtLastFourDigitOfAadhhar"
            style="@style/InputFieldEditText"
            android:hint="@string/text_last_four_digit_of_aadhhar"
            android:inputType="numberPassword"
            android:maxLength="4" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/text_ekyc_doc" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/ekycDocumentSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp" />

    <ImageView
        android:id="@+id/ivUserImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="contentDescription" />

    <Button
        android:id="@+id/btnRegisterUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/title_register_user" />


</LinearLayout>