<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <TextView
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="match_parent"
        android:minHeight="?actionBarSize"
        android:background="@color/colorPrimary"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:textColor="@android:color/white"
        android:paddingStart="16dp"
        android:text="@string/title_face_match" />


    <com.google.android.material.textfield.TextInputLayout style="@style/InputFieldLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtTransactionId"
            style="@style/InputFieldEditText"
            android:hint="@string/text_transaction_id"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout style="@style/InputFieldLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtUserId"
            android:inputType="number"
            style="@style/InputFieldEditText"
            android:hint="@string/text_domain_id" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout style="@style/InputFieldLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtLastFourDigitOfAadhhar"
            style="@style/InputFieldEditText"
            android:hint="@string/text_last_four_digit_of_aadhhar"
            android:inputType="numberPassword"
            android:maxLength="4" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnFaceMatch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/title_face_match" />

</LinearLayout>