<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/inputContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout style="@style/InputFieldLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtTransactionId"
                style="@style/InputFieldEditText"
                android:hint="@string/text_transaction_id"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/text_ekyc_doc" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/ekycDocumentSpinner"
            android:layout_width="match_parent"
            android:visibility="gone"
            android:layout_height="wrap_content"
            android:layout_margin="8dp" />

        <TextView
            android:id="@+id/tvEkycDocumentSelector"
            android:hint="@string/text_select_ekyc_doc"
            android:layout_margin="8dp"
            android:text="@string/text_select_ekyc_doc"
            android:drawableStart="@drawable/ic_baseline_attach_file_24"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tvEkycDocumentName"
            android:layout_margin="8dp"
            android:hint="@string/text_no_ekyc_file_selected"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <ImageView
            android:id="@+id/ivUserImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="contentDescription" />

        <Button
            android:id="@+id/btnPerformStatelessMatch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:enabled="false"
            android:text="@string/text_perform_stateless_match" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/statelessMatchResponse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:id="@+id/imgResponseStatus"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_fail" />

        <TextView
            android:id="@+id/responseText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnDone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Ok" />
    </LinearLayout>
</FrameLayout>